Updated project organization